tests/NormalTests/paczka1/small_fuzzy/32227294.err
Error in line 3: S865 A595 73,0
Error in line 7: DvUyyIQzfjL A994 49,6
